# electroplating

./: Cargo.toml  Makefile.toml  README.md  index.html  justfile
.cargo/: config.toml
src/: asset_loader.rs  electron.rs  exit.rs  main.rs  plate.rs
