[package]
name = "electroplating"
description = "A game for the Nokia 3310 Jam 3"
version = "0.1.0"
authors = [
    "Adarsh Krishnan <adarsh.krishnan@wolt.com>",
    "ollipa <olli@paakkunainen.fi>",
]
edition = "2021"

[dependencies]
bevy = { version = "0.12.1", features = ["wav"] }
bevy_rapier2d = { version = "0.24.0", features = ["wasm-bindgen"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[features]
debug = ["bevy_rapier2d/debug-render-2d"]
